--- a/css/index.css
+++ b/css/index.css
@@ -96,3 +96,23 @@ a {
   -webkit-justify-content : center;
           justify-content : center;
 }
+
+@media (max-width: 1034px) {
+  .mini-display {
+    padding-top: 23px;
+    font-size: 20px;
+  }
+  a {
+      padding: 2px !important;
+  }
+  .navbar {
+    padding-top: 23px;
+  }
+
+}
+@media (max-width: 768px) {
+  .main-display {
+    font-size: 30px;
+    font-size: 2.5vh;
+  }
+}
