--- a/css/projects.css
+++ b/css/projects.css
@@ -15,6 +15,13 @@
     padding-top: 23px;
     font-size: 20px;
   }
+  a {
+      padding: 2px !important;
+  }
+  .navbar {
+    padding-top: 23px;
+  }
+
 }
 
 .project-thumbs {
@@ -31,6 +38,11 @@
   border-radius: 4px;
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
   background-color: rgba(255,255,255, 0.6);
+  transition: background-color 1s;
+}
+
+.project-mini-box:hover {
+  background-color: rgba(255,255,255, 1);
 }
 
 .project-title {
