background image doesn't scroll, but does crop acceptably. mini boxes are transparent instead of white, and fade to a translucent white color.

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,8 @@ html {
 
 body {
   background-image: url('../img/sunrise-crop-5.jpg');
-  /*background-size: 100%;*/
+  background-size: cover;
+  background-attachment: fixed;
   height: 100%;
   min-height: 100%;
 }
