--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,10 @@ a {
   border: 4px solid transparent !important;  
 }
 
+.the_r {
+  color: gold;
+}
+
 .nav-pills>li.active>a {
   color: white !important;
   background-color: transparent !important;
