--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ html {
 
 body {
   background-image: url('../img/sunrise-crop-5.jpg');
-  background-size: cover;
+  /*background-size: cover;*/
   background-attachment: fixed;
   height: 100%;
   min-height: 100%;
