--- a/css/projects.css
+++ b/css/projects.css
@@ -1,53 +1,102 @@
-.navbar {
-  padding-top: 10px
+
+body {
+  padding: 30px;
 }
 
-.mini-display {
-  opacity: 0;
-  padding-top: 8px;
-  font-size: 45px; 
-  color: white;
-  font-family: 'Syncopate', sans-serif;
-}
+@media (max-width: 500px) {
 
-@media (max-width: 1034px) {
-  .mini-display {
-    padding-top: 23px;
-    font-size: 20px;
+  .project-title {
+    font-size: 20px !important;
   }
+
 }
 
-.projects {
-  padding-top: 100px;
+.minibox-group {
+  padding-top: 30px;
   /*border: 1px solid black;*/
 }
 
-.project-box {
+.project-mini-box.sold,
+.project-box.sold  {
+  background-color: rgba(150,150,150, .55);
+}
+
+.project-mini-box {
+  max-height: 333px;
   opacity: 0;
   border: 1px solid white;
   overflow: hidden;
-  height: 300px;
   margin-top:20px;
   border-radius: 4px;
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
-  background-color: rgba(255,255,255, 0.6);
+  background-color: rgba(150,150,150, 0);
+  transition: background-color 1.1s;
+}
+
+.project-mini-box:hover {
+  background-color: rgba(255,255,255, 0.3);
 }
 
 .project-title {
-  color: grey;
+  color: white;
   padding-top: 3px;
   font-size: 35px;
   font-family: 'Raleway';
   border-bottom: 1px solid white;
 }
 
+.project-title-long {
+  color: white;
+  padding-top: 3px;
+  font-size: 28px;
+  font-family: 'Raleway';
+  border-bottom: 1px solid white;
+}
+
 .project-thumb {
   margin-top: 10px;
+  margin-bottom: 10px;
   overflow: hidden;
+  max-height: 100%;
 }
 
 img {
-  border: 2px solid black;
-  height: 225px;
+  /*height: 225px;*/
   border-radius: 5px;
+}
+
+.nav-spacer {
+  height: 100px;
+}
+
+.project-box {
+  color: white;
+  padding: 20px;
+  font-family: 'Raleway';
+  opacity: 0;
+  border: 1px solid white;
+  overflow: hidden;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
+  background-color: rgba(100,100,100, .75);
+}
+
+.project-description {
+  padding: 10px;
+}
+
+.back-arrow {
+  height:50px;
+  width:50px;
+}
+
+.img-thumb {
+  border: 2px solid black;
+  /*max-width: 304px;*/
+}
+
+.project-box {
+  display: none;
 }
