--- a/css/all.css
+++ b/css/all.css
@@ -154,9 +154,10 @@ h1 {
 
 .navbar {
   padding-top: 23px;
+  min-width: 228px;
 }
 
-@media (max-width: 1034px) {
+@media (max-width: 991px) {
   .mini-display {
     padding-top: 23px;
     font-size: 20px;
@@ -186,7 +187,18 @@ h1 {
     border-radius: 8px !important;
     border: 2px solid transparent !important;  
     padding: 4px !important;
-    font-size: 15px;
+  }
+
+  @media (min-width: 412px) {
+    a {
+      font-size: 15px;
+    }
+  }
+
+  @media (max-width: 411px) {
+    a {
+      font-size: 11px;
+    }
   }
 
 }
