--- a/css/projects.css
+++ b/css/projects.css
@@ -3,7 +3,7 @@ body {
   padding: 30px;
 }
 
-@media (max-width: 500px) {
+@media (min-width: 412px) and (max-width: 500px){
   .project-title {
     color: white;
     padding-top: 3px;
@@ -28,6 +28,21 @@ body {
   }
 }
 
+@media (max-width: 411px) {
+  .project-title {
+    color: white;
+    padding-top: 1px;
+    font-size: 12px;
+    font-family: 'Raleway';
+    border-bottom: 1px solid white;
+  }
+
+/*  .project-title-small {
+    font-size: 27px !important;
+    padding: 9px;
+  }*/
+}
+
 .project-title.noline {
   border-bottom: 0px solid white !important;
 }
@@ -44,12 +59,13 @@ body {
 }
 
 .project-mini-box {
+  min-width: 147px;
   max-height: 333px;
   opacity: 0;
-  border: 1px solid white;
+  border: 2px solid white;
   overflow: hidden;
   margin-top:20px;
-  border-radius: 4px;
+  border-radius: 6px;
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
   background-color: rgba(150,150,150, 0);
   transition: background-color 1.1s;
@@ -66,25 +82,21 @@ body {
   max-height: 100%;
 }
 
-img {
-  /*height: 225px;*/
-  border-radius: 5px;
-}
-
 .nav-spacer {
   height: 100px;
 }
 
 .project-box {
+  display: none; /* overriden by velocity.js as necessary */
   color: white;
   padding: 20px;
   font-family: 'Raleway';
   opacity: 0;
-  border: 1px solid white;
+  border: 2px solid white;
   overflow: hidden;
   margin-top: 20px;
   margin-bottom: 20px;
-  border-radius: 4px;
+  border-radius: 6px;
   box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
   background-color: rgba(100,100,100, .75);
 }
@@ -98,11 +110,15 @@ img {
   width:50px;
 }
 
-.img-thumb {
-  border: 2px solid black;
-  /*max-width: 304px;*/
+.project-minibox-img {
+  border: 2px solid white;
+  border-radius: 7px;
+  max-height: 260px;
 }
 
-.project-box {
-  display: none;
+.project-box-img {
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid white;
+  border-radius: 7px;
 }
