blackbox basic functionality is essentially complete! Correctly responsive as well. clicking an image in meadowview enlarges the clicked image into a blackbox viewer with acceptable minimalist formatting, and clicking anywhere returns you to prior view.

--- a/css/projects.css
+++ b/css/projects.css
@@ -1,6 +1,11 @@
 
 body {
+  height: 100%;
   padding: 30px;
+}
+
+html {
+  height: 100%;
 }
 
 @media (min-width: 412px) and (max-width: 528px){
@@ -144,13 +149,13 @@ body {
 }
 
 .blackbox-img {
+  max-width: 80%;
+  height:auto;
   position: fixed;
-  margin-left: auto;
-  margin-right: auto;
-  height: 60%;
-  width: 60%;
-  left: 20%;
   top: 20%;
+  left: 10%;
+  border-radius:8px;
+  border: 2px solid white;
 }
 
 .darker-background {
