had to add css updates as well to get projects-experimental to work, of course.

--- a/css/projects.css
+++ b/css/projects.css
@@ -128,3 +128,31 @@ body {
   border: 2px solid white;
   border-radius: 7px;
 }
+
+.blackbox {
+  display: none;
+  background-color: rgba(50,50,50,.9);
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
+  width: 100%;
+  padding: 0px !important;
+  margin: 0px !important;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
+.blackbox-img {
+  max-width: 80%;
+  height:auto;
+  position: fixed;
+  top: 20%;
+  left: 10%;
+  border-radius:8px;
+  border: 2px solid white;
+}
+
+.darker-background {
+
+}
