--- a/css/all.css
+++ b/css/all.css
@@ -35,11 +35,11 @@
     /* miniaturized background img that is a small piece of the desktop image, but doesn't work well on actual mobile devices in spite of seeming great on chrome's mobile emulator */
     /*background-image: url('../img/mobile_background_4.jpg') !important;*/
 
-    background-color: #799c4a;
+    background-color: #2F4858;
   }
   
      .project-box {
-    background-color: #799c4a !important;
+    background-color: #2F4858 !important;
   } 
 }
 
